; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vaapi/extr_vlc_vaapi.c_vlc_vaapi_QueryVideoProcFilterCaps.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vaapi/extr_vlc_vaapi.c_vlc_vaapi_QueryVideoProcFilterCaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vaQueryVideoProcFilterCaps = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@VLC_EGENERIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_vaapi_QueryVideoProcFilterCaps(i32* %0, i32 %1, i32 %2, i32 %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i8* %4, i8** %12, align 8
  store i32* %5, i32** %13, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* @vaQueryVideoProcFilterCaps, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i8*, i8** %12, align 8
  %20 = load i32*, i32** %13, align 8
  %21 = call i32 @VA_CALL(i32* %14, i32 %15, i32 %16, i32 %17, i32 %18, i8* %19, i32* %20)
  %22 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %22, i32* %7, align 4
  br label %25

23:                                               ; No predecessors!
  %24 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %23, %6
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i32 @VA_CALL(i32*, i32, i32, i32, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
